--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "google-map-react": "^2.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.44.3",
