--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,5 @@
-    DB_STORE = mongodb+srv://dimalit:dimalit144695@storeclus.5uudjcw.mongodb.net/STORE_DB?retryWrites=true&w=majority
-
-    DB_PRODUCTS = mongodb+srv://dimalit:dimalit144695@storeclus.5uudjcw.mongodb.net/Store_items?retryWrites=true&w=majority
+    DB_TRAVEL = mongodb+srv://dimalit:Dimalit144695@travelcluster.hzy0gb9.mongodb.net/
+    
 
     JWT = ZFz5iL6c8hdlyU0aV83PdZxhEpHO8l61hv
     PORT=5000
